tests/lean/parser1.lean.expected.out
result:
[(module.header [(module.prelude "prelude")] []) (module.eoi "")]
result:
[(module.header [] [(module.import "import" [(module.import_path [] `me)])])
 (module.eoi "")]
<unknown>:1:0: error: expected command
partial syntax tree:
[(module.header [] []) (module.eoi "")]
<unknown>:1:6: error: unexpected end of input
expected "." or identifier
partial syntax tree:
[(module.header
  []
  [(module.import "import" [(module.import_path [] <missing>) <missing>])
   <missing>])
 (module.eoi "")]
result:
[(module.header
  [(module.prelude "prelude")]
  [(module.import
    "import"
    [(module.import_path ["." "."] `a) (module.import_path [] `b)])
   (module.import "import" [(module.import_path [] `c)])])
 (module.eoi "")]
result:
[(module.header [] [])
 (command.open
  "open"
  [(command.open_spec `me [] [] [] []) (command.open_spec `you [] [] [] [])])
 (module.eoi "")]
result:
[(module.header [] [])
 (command.open
  "open"
  [(command.open_spec
    `me
    [(command.open_spec.as "as" `you)]
    [(command.open_spec.only ["(" `a] [`b `c] ")")]
    [(command.open_spec.renaming
      ["(" "renaming"]
      [(command.open_spec.renaming.item `a "->" `b)
       (command.open_spec.renaming.item `c "->" `d)]
      ")")]
    [(command.open_spec.hiding "(" "hiding" [`a `b] ")")])])
 (module.eoi "")]
<unknown>:1:11: error: expected command
partial syntax tree:
[(module.header [] [])
 (command.open
  "open"
  [(command.open_spec `me [] [] [] []) (command.open_spec `you [] [] [] [])])
 (module.eoi "")]
<unknown>:1:5: error: expected identifier
<unknown>:1:9: error: unexpected end of input
expected identifier
partial syntax tree:
[(module.header [] [])
 (command.open "open" [<missing> <missing>])
 (command.open "open" [<missing> <missing>])
 (module.eoi "")]
<unknown>:1:8: error: expected command
partial syntax tree:
[(module.header [] [])
 (command.open "open" [(command.open_spec `me [] [] [] [])])
 (command.open "open" [(command.open_spec `you [] [] [] [])])
 (module.eoi "")]
result:
[(module.header [] [])
 (command.open "open" [(command.open_spec `a [] [] [] [])])
 (command.section "section" [`b])
 (command.open "open" [(command.open_spec `c [] [] [] [])])
 (command.section "section" [`d])
 (command.open "open" [(command.open_spec `e [] [] [] [])])
 (command.end "end" [`d])
 (command.end "end" [`b])
 (module.eoi "")]
result:
[(module.header [] [])
 (command.section "section" [`a])
 (command.end "end" [])
 (module.eoi "")]
Type (max u v) : Type ((max u v)+1)
result:
[(module.header [] [])
 (command.check
  "#check"
  (term.app
   (term.app
    (term.sort_app (term.sort (1 "Type")) (level.leading (0 `max)))
    (ident_univs `u []))
   (ident_univs `v [])))
 (module.eoi "")]
(ok (some "notationa`+`:65 b:65 :=nat.addab"))
<stdin>:78:0: error: unknown declaration 'sorry_ax'
parser1.lean:1:0: error: don't know how to synthesize placeholder
context:
⊢ Sort ?
parser1.lean:78:0: error: unknown declaration 'sorry_ax'
parser1.lean:78:0: error: ambiguous overload, possible interpretations
  α
  foo.α
Additional information:
parser1.lean: context: switched to basic overload resolution where arguments are elaborated without any information about the expected type because it failed to disambiguate overload using the expected type
  Sort ?
the following overloaded terms were applicable
  α
  α
<stdin>:1:0: parser cache hit rate: 164/191
<stdin>:1:0: parser cache hit rate: 65/76
parser1.lean:102:0: warning: using 'exit' to interrupt Lean
